# Training

BinTree/: BinTree.cpp  BinTree.h  BinaryTree.cpp  BinaryTree.h  CMakeLists.txt  Data.cpp  Data.h  IBinTree.h  IData.h  ITree.h  Node.h  main.cpp
Comprasion/: Hash.h  IComprasion.cpp  IComprasion.h  Tree.cpp  Tree.h  Vector.cpp  Vector.h  dictionary.txt  main.cpp  texts.txt
Pong/: Ball.cpp  Ball.h  BotController.cpp  BotController.h  EnemyPLayer.cpp  EnemyPLayer.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GameWindow.cpp  GameWindow.h  IBall.h  Line.cpp  Line.h  Log.cpp  Log.h  Player.cpp  Player.h  PlayerController.cpp  PlayerController.h  Settings.h  Singleton.h  Unit.cpp  Unit.h  main.cpp
PongProject/: CMakeLists.txt  Game.cpp  Game.h  GameWindow.h  Readme.md  main.cpp
PongProject/Controls/: BotController.cpp  BotController.h  PlayerController.cpp  PlayerController.h
PongProject/Objects/: Ball.cpp  Ball.h  EnemyPLayer.cpp  EnemyPLayer.h  GameObject.cpp  GameObject.h  IBall.h  Line.cpp  Line.h  Player.cpp  Player.h  Unit.cpp  Unit.h
PongProject/Utils/: Log.cpp  Log.h
comp4/: HashTable.cpp  HashTable.h  Text.cpp  Tree.cpp  Tree.h  Umap.cpp  Vector.cpp  main.cpp
compr3/: IVector.h  Text.cpp  Text.h  Vector.cpp  Vector.h  main.cpp
comprasion2/: HashTable.cpp  HashTable.h  IComprasion.cpp  IComprasion.h  Tree.cpp  Tree.h  Umap.cpp  Umap.h  Vector.cpp  Vector.h  dictionary.txt  main.cpp  texts.txt
newPong/: Ball.h  Bot.h  Game.h  GameWindow.h  IGameObject.h  IPlayer.h  Player.h  main.cpp
pong 7/: Ball.h  BotMove.h  BotOrSecondPLayer.h  Game.h  GameObject.h  GameWindow.h  Log.h  Player.h  Settings.h  Singleton.h  main.cpp
pong 8/: Ball.h  BotMove.h  EnemyPlayer.h  Game.h  GameObject.h  GameWindow.h  IPlayerMovement.h  IUnit.h  Line.h  Log.h  Player.h  PlayerController.h  Unit.h  (+2 more)
(+67 files in other folders)
